# audience-poll

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
backend/: actions.py  poll.py  rooms.py  subscriber.py
client/: .prettierrc.yaml  package.json
client/src/: PollProvider.tsx  WebSocket.tsx  index.tsx
client/src/Connection/: WebSocket.tsx
